methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:23: error: not enough arguments for method marquage: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  gauche();avance();marquage();recule();droite()
                            ^